--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NearBeer</string>
     <string name="beer_activity_title">Beer Info</string>
     <string name="action_refresh">refresh</string>
+    <string name="menu_share">Share</string>
 </resources>
